--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,4 +32,8 @@ flutter:
     - assets/retire.png
     - assets/emergency.png
     - assets/home.png
-    - assets/abroad.png
+    - assets/marriage.png
+    - assets/business.png
+    - assets/car.png
+    - assets/invest.png
+    
