--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,8 @@ dependencies:
   xml: ^6.1.0
   url_launcher: ^6.1.5
   cloud_firestore: ^5.5.1
+  syncfusion_flutter_charts: ^28.1.39
+  syncfusion_flutter_core: ^28.1.39
 
 dev_dependencies:
   flutter_test:
