--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   cupertino_icons: ^1.0.8 # Default iOS icons.
   video_player: ^2.5.1
   carousel_slider: ^5.0.0
+  razorpay_flutter: ^1.3.0
 
 
 dev_dependencies:
